--- a/springdatarest/src/main/resources/application.yml
+++ b/springdatarest/src/main/resources/application.yml
@@ -6,13 +6,13 @@ spring:
    settings:
     web-allow-others: true
  datasource:
-  url: jdbc:h2:file:~/nestordb
+  url: jdbc:h2:file:~/testdb
   username: sa
   password: sa
-  driverClassName: org.h2.Driver     
+  driverClassName: org.h2.Driver  
  jpa:
-  database-platform: org.hibernate.dialect.H2Dialect     
+  database-platform: org.hibernate.dialect.H2Dialect
   generate-ddl: true
-  hibernate:  
+  hibernate:
    ddl-auto: update
 
